--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,5 @@
 .DS_Store
 
 
+02-JavaScript/09-formsAndObjects/03-Gucci-Project/Room2/dist/index.js
+02-JavaScript/09-formsAndObjects/03-Gucci-Project/Room2/index.ts
